# secureauth-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  pr-check.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/v1/: router.py
app/core/: config.py  database.py  exceptions.py  security.py
app/modules/audit/: model.py
app/modules/auth/: model.py
app/modules/sessions/: model.py
app/modules/users/: model.py
app/shared/: base_model.py  schemas.py
scripts/: generate_keys.py
tests/: conftest.py  test_config.py  test_smoke.py
