[project]
name = "secureauth-platform"
version = "0.1.0"
description = "Plataforma de autenticación y autorización - Open-source"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    # Cache / Sessions
    "redis>=7.4.0",
    # Security
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "pyotp>=2.9.0",
    "cryptography>=48.0.0",
    # Validation & Config
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    # HTTP client (for OAuth2)
    "httpx>=0.28.1",
    # Utilities
    "python-multipart>=0.0.27",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    "anyio>=4.13.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in tests
